--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
 <html>
-<body>
-  <h1>Hello World</h1>
-  <p>I'm hosted with GitHub Pages.</p>
-  <p>Hopefully...</p>
-</body>
+    <head>
+        <title>Ian's page</title>
+        <link rel="stylesheet" href="main.css">
+    </head>
+    <body>
+
+        <p>I'm hosted with GitHub Pages.</p>
+        <p>Hopefully...</p>
+    </body>
 </html>
+
+
+
+<h1>Hello World</h1>
