--- a/layout-practice/index.html
+++ b/layout-practice/index.html
@@ -10,15 +10,19 @@
                 <header>
                     <div class="branding"></div>
                     <nav>
-                        <a href="#">Lorem</a>
-                        <a href="#">Ipsum Ipsum Ipsum</a>
-                        <a href="#">Dolor</a>
+                        <a class="pill-button" href="#">Lorem</a>
+                        <a class="pill-button" href="#">Ipsum Ipsum Ipsum</a>
+                        <a class="pill-button" href="#">Dolor</a>
                     </nav>
                 </header>
                 <section id="big-promo">
                     <div class="promo-message">
                         <h1>Lorem ipsum dolor sit amet</h1>
                         <p>Mauris sed iaculis mauris. Cras congue pulvinar laoreet. Mauris quis elit feugiat, vehicula enim et, tempus tellus. Vestibulum sed risus libero.</p>
+                        <div>
+                            <a class="pill-button promo" href="#">Thing One</a>
+                            <a class="pill-button promo" href="#">Thing Two</a>
+                        </div>
                     </div>
                 </section>
             </div>
