--- a/layout-practice/index.html
+++ b/layout-practice/index.html
@@ -78,6 +78,17 @@
               <p>Mauris sed iaculis mauris. Cras congue pulvinar laoreet. Mauris quis elit feugiat, vehicula enim et, tempus tellus. Vestibulum sed risus libero.</p>
               <a class="pill-button promo" href="#">Thing Two</a>
             </section>
+            
+            <footer>
+              <div class="footer-links">
+                <a href="#">Link 1</a>
+                <a href="#">Link 2</a>
+                <a href="#">Link C</a>
+              </div>
+              <div class="footer-copyright">
+                <p>Sweet Copyright Notice. Don't steal.</p>
+              </div>
+            </footer>
           
         </div>
     </body>
